# facile-transpiler

./: CMakeLists.txt  README.md  flake.nix  grammar.ebnf
src/: facile.lex  facile.y
test/: arithmetic.facile  assignment.facile  elses.facile  gcd.facile  ifs.facile  run_script.sh  whiles.facile
